--- a/hackathons-wiki.html
+++ b/hackathons-wiki.html
@@ -1300,7 +1300,13 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
-                                        <strong>Zoom Kick Off</strong> @ July 21, 2025<br>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Zoom Kick Off</strong> @ July 21, 2025 8pm EST / 5pm PST / 12am UTC<br>
                                         <a href="https://hackuniversityzoom.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-camera-video"></i> hackuniversityzoom.vercel.app
                                         </a>
@@ -1356,7 +1362,13 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
-                                        <strong>Zoom Kick Off</strong> @ September 19, 2025<br>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Zoom Kick Off</strong> @ September 19, 2025 11pm EST / 8pm PST / 4am UTC<br>
                                         <a href="https://hackuniversityzoom.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-camera-video"></i> hackuniversityzoom.vercel.app
                                         </a>
@@ -1406,6 +1418,24 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Hack Agenda</strong><br>
+                                        <a href="https://hackuniversityagenda.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-list-check"></i> hackuniversityagenda.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Zoom Kick Off</strong> @ October 13, 2025<br>
+                                        <a href="https://hackuniversityzoom.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-camera-video"></i> hackuniversityzoom.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong> (Submission Portal)<br>
                                         <a href="https://empowherhack2025-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> empowherhack2025-devpost.vercel.app
@@ -1413,9 +1443,9 @@ body::before {
                                     </div>
                                     <div>
                                         <strong>Winners</strong><br>
-                                        <span class="checklist-link" style="color: var(--text-light);">
-                                            <i class="bi bi-trophy"></i> Winners (Coming Soon)
-                                        </span>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -1450,6 +1480,24 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Hack Agenda</strong><br>
+                                        <a href="https://hackuniversityagenda.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-list-check"></i> hackuniversityagenda.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Zoom Kick Off</strong> @ December 8, 2025<br>
+                                        <a href="https://hackuniversityzoom.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-camera-video"></i> hackuniversityzoom.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong> (Submission Portal)<br>
                                         <a href="https://codefesthack2025-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> codefesthack2025-devpost.vercel.app
@@ -1457,9 +1505,9 @@ body::before {
                                     </div>
                                     <div>
                                         <strong>Winners</strong><br>
-                                        <span class="checklist-link" style="color: var(--text-light);">
-                                            <i class="bi bi-trophy"></i> Winners (Coming Soon)
-                                        </span>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -1494,6 +1542,24 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Hack Agenda</strong><br>
+                                        <a href="https://hackuniversityagenda.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-list-check"></i> hackuniversityagenda.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Zoom Kick Off</strong> @ March 9, 2026<br>
+                                        <a href="https://hackuniversityzoom.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-camera-video"></i> hackuniversityzoom.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong> (Submission Portal)<br>
                                         <a href="https://hackfiestahack2026-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> hackfiestahack2026-devpost.vercel.app
@@ -1501,9 +1567,9 @@ body::before {
                                     </div>
                                     <div>
                                         <strong>Winners</strong><br>
-                                        <span class="checklist-link" style="color: var(--text-light);">
-                                            <i class="bi bi-trophy"></i> Winners (Coming Soon)
-                                        </span>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -1538,6 +1604,24 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Hack Agenda</strong><br>
+                                        <a href="https://hackuniversityagenda.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-list-check"></i> hackuniversityagenda.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Zoom Kick Off</strong> @ March 20, 2026<br>
+                                        <a href="https://hackuniversityzoom.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-camera-video"></i> hackuniversityzoom.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong> (Submission Portal)<br>
                                         <a href="https://305hackspring2026-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> 305hackspring2026-devpost.vercel.app
@@ -1545,9 +1629,9 @@ body::before {
                                     </div>
                                     <div>
                                         <strong>Winners</strong><br>
-                                        <span class="checklist-link" style="color: var(--text-light);">
-                                            <i class="bi bi-trophy"></i> Winners (Coming Soon)
-                                        </span>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -1580,9 +1664,21 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong><br>
                                         <a href="https://codestormhack2025-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> codestormhack2025-devpost.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Winners</strong><br>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
                                         </a>
                                     </div>
                                 </div>
@@ -1612,9 +1708,21 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong><br>
                                         <a href="https://305hackspring2025-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> 305hackspring2025-devpost.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Winners</strong><br>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
                                         </a>
                                     </div>
                                 </div>
@@ -1644,9 +1752,21 @@ body::before {
                                         </a>
                                     </div>
                                     <div>
+                                        <strong>Mentorship Schedule</strong><br>
+                                        <a href="https://hackuniversitymentorship.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-people-fill"></i> hackuniversitymentorship.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
                                         <strong>Devpost</strong><br>
                                         <a href="https://hackfiestahack2025-devpost.vercel.app/" class="checklist-link" target="_blank">
                                             <i class="bi bi-code-square"></i> hackfiestahack2025-devpost.vercel.app
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <strong>Winners</strong><br>
+                                        <a href="https://hackuniversitywinners.vercel.app/" class="checklist-link" target="_blank">
+                                            <i class="bi bi-trophy"></i> hackuniversitywinners.vercel.app
                                         </a>
                                     </div>
                                 </div>
