--- a/RENDER.html
+++ b/RENDER.html
@@ -5,3 +5,27 @@
 </head>
 <body></body>
 </html>
+
+
+<!-- 
+
+https://305hackspring2026-devpost.vercel.app/
+
+https://305hackspring2026-linkedinrsvp.vercel.app/
+https://305hackspring2026-linkedin.vercel.app/
+
+
+hackuniversityzoom.vercel.app
+
+
+hackuniversitydiscord.vercel.app
+hacksatfiudiscord.vercel.app
+hacksatfiu-discord.vercel.app
+
+
+https://hackuniversity.vercel.app/
+https://hacksatfiu.vercel.app/
+https://hacks-at-fiu.vercel.app/ 
+
+
+-->
