--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -1440,6 +1440,27 @@ body::before {
     <h2 class="faq-title glitch" data-text="INDUSTRY PROFESSIONAL FAQ">INDUSTRY PROFESSIONAL FAQ</h2>
     <p class="faq-subtitle">[ EXECUTIVE BRIEFING ] - Strategic information for industry professionals and tech experts</p>
     
+            <div class="faq-item">
+            <button class="faq-question" onclick="toggleFAQ(this)">
+                <span class="faq-icon">></span>
+                <span>How do I know if my volunteer application was accepted or which role I have been confirmed for upcoming events?</span>
+                <i class="bi bi-chevron-down faq-arrow"></i>
+            </button>
+            <div class="faq-answer">
+                <p>After being accepted, your role participation for <strong>judging, mentoring, or speaking</strong> will be confirmed through your response on <strong>Form No. 2</strong> (sent after acceptance as volunteer). It is important you <strong>join Discord</strong> as communication through email will be minimal due to high volume of volunteers.<br><br>
+
+                <strong>Important Notes:</strong><br>
+                • <strong>Form No. 1</strong> is just an interest form to know headcount and evaluate volunteers - <strong>IT DOES NOT confirm participation, only Form No. 2 does</strong><br>
+                • If something changes and you cannot participate anymore, please message on DM or tag <strong>hack-organizers</strong> on private volunteer channel<br>
+                • We might not have daily updated participation on DevPost or hack page for in-person volunteers, but you can always use your latest response on Form No. 2 as reference<br><br>
+
+                <strong>Timeline:</strong><br>
+                • <strong>1 day before hack:</strong> We finalize participation with all mentors and speakers who confirmed hours (Form No. 4 for mentors, Form No. 3 for speakers)<br>
+                • Non-responsive volunteers will be removed since we need this information for participants<br>
+                • <strong>For judges:</strong> You'll get access when the hack opens to the EXPO, or prior on rolling basis - use Form No. 2 if you haven't received access since sometimes it's due to missing your confirmation</p>
+            </div>
+        </div>
+
     <div class="faq-container">
                 <div class="faq-item">
             <button class="faq-question" onclick="toggleFAQ(this)">
