--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -4522,7 +4522,7 @@ body {
                 </div>
 
                 <!-- Volunteer 14 -->
-                <div class="col-lg-4 col-md-6 mb-4">
+                <!-- <div class="col-lg-4 col-md-6 mb-4">
                     <div class="volunteer-profile-card">
                         <div class="volunteer-avatar">
                             <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Lisa Thompson" class="volunteer-img">
@@ -4533,7 +4533,7 @@ body {
                             <p class="volunteer-experience">Experience: Co-founder & CTO at Oatmeal AI</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Volunteer 15 -->
                 <div class="col-lg-4 col-md-6 mb-4">
