--- a/HACK-4-SummerCodeX25.HTML
+++ b/HACK-4-SummerCodeX25.HTML
@@ -1507,6 +1507,25 @@
                     <a href="hacks-toolkit.html" target="_blank" style="background: transparent; color: #4285f4; padding: 1rem; border-radius: 50px; text-decoration: none; text-align: center; font-weight: bold; border: 2px solid #4285f4; transition: all 0.3s ease;">
                         <i class="fas fa-toolbox me-2"></i> Hacks Toolkit
                     </a>
+
+                    <a href="https://hackuniversityagenda.vercel.app/" target="_blank" style="background: transparent; color: #4285f4; padding: 1rem; border-radius: 50px; text-decoration: none; text-align: center; font-weight: bold; border: 2px solid #4285f4; transition: all 0.3s ease;">
+                        <i class="fas fa-users me-2"></i> Mentorship Schedule
+                    </a>
+
+                    <a href="https://hackuniversityzoom.vercel.app" target="_blank" style="background: transparent; color: #4285f4; padding: 1rem; border-radius: 50px; text-decoration: none; text-align: center; font-weight: bold; border: 2px solid #4285f4; transition: all 0.3s ease;">
+                        <i class="fas fa-video me-2"></i> Zoom Kick Off
+                    </a>
+
+                    <a href="https://hackuniversityzoom.vercel.app" target="_blank" style="background: transparent; color: #4285f4; padding: 1rem; border-radius: 50px; text-decoration: none; text-align: center; font-weight: bold; border: 2px solid #4285f4; transition: all 0.3s ease;">
+                        <i class="fas fa-laptop-code me-2"></i> Zoom Workshops
+                    </a>
+
+                    <a href="https://hackuniversityagenda.vercel.app/" target="_blank" style="background: transparent; color: #4285f4; padding: 1rem; border-radius: 50px; text-decoration: none; text-align: center; font-weight: bold; border: 2px solid #4285f4; transition: all 0.3s ease;">
+                        <i class="fas fa-calendar-alt me-2"></i> Hack Agenda
+                    </a>
+
+
+
                 </div>
             </div>
 
