--- a/Z- VERCEL LINKS.html
+++ b/Z- VERCEL LINKS.html
@@ -30,4 +30,13 @@ https://hacks-at-fiu.vercel.app/
 https://codecrunchvolunteerform-no7.vercel.app/
 https://codestormhack2025-winners.vercel.app/
 
+
+discord invite link:
+codecrunchglobal-discordserver.vercel.app
+
+
+https://summercodexhack2025-speakers.vercel.app/
+https://summercodexhack2025-mentors.vercel.app/
+
+
 -->
