--- a/HACK-4-SummerCodeX25.HTML
+++ b/HACK-4-SummerCodeX25.HTML
@@ -1458,7 +1458,7 @@
     <div style="margin: 3rem 0; background: rgba(255, 107, 107, 0.15); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 107, 107, 0.3);">
         <h3 style="color: #ff6b6b; text-align: center; margin-bottom: 1.5rem; font-size: 1.5rem;">🌐 THEME: XR, Web3, Blockchain & Decentralization</h3>
         <p style="text-align: center; margin-bottom: 1rem;">Explore the cutting edge of technology with Extended Reality, decentralized systems, and blockchain innovation.</p>
-        <p style="text-align: center; font-weight: bold; color: #e0e0ff;">🌍 Open to ALL majors from ANY university & High School Students (16+)!</p>
+        <p style="text-align: center; font-weight: bold; color: #e0e0ff;">🌍 Open to students worldwide — all majors, all universities, and high school students (16+). 🚀 Devpost eligibility restrictions apply!</p>
     </div>
 
     <!-- Kickoff Event Section -->
