--- a/RE-COMMENTS-CODE.html
+++ b/RE-COMMENTS-CODE.html
@@ -12,11 +12,17 @@ css
 
 HTML 
 
-<!-- Volunteer Section -->
+<!-- clock Section -->
 <!-- ***************** -->
 <!-- ***************** -->
 <!-- ***************** -->
-<!-- Volunteer Section -->
+<!--  Section -->
+
+<!-- clock Section -->
+<!-- ***************** -->
+<!-- ***************** -->
+<!-- ***************** -->
+<!--  end Section -->
 
 
 JavaScript
