--- a/community-access.html
+++ b/community-access.html
@@ -442,7 +442,7 @@
                     </div>
                     
                     <div class="text-center">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScOA6IBnLxnxEnk-BOaXYyPXpJ3dU6Cu4OOrPJ7ErOgKvIdEQ/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" 
+                        <a href="https://codecrunchglobalform-no1.vercel.app/" target="_blank" rel="noopener noreferrer" 
                            class="inline-block cc-orange cc-blue-text px-8 py-4 rounded-lg text-lg font-bold shadow-lg hover:bg-yellow-400 transition-colors transform hover:scale-105 duration-200">
                             FILL OUT MEMBERSHIP FORM
                         </a>
