--- a/hackathonvolunteer-wikicopy.html
+++ b/hackathonvolunteer-wikicopy.html
@@ -1692,7 +1692,7 @@ body::before {
   <h2 class="checklist-title glitch" data-text="CHECK VOLUNTEER STATUS">CHECK VOLUNTEER STATUS</h2>
   <p style="color: limegreen; font-family: monospace;">Enter your GitHub username or profile URL below to see your application status.</p>
   <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-top: 1rem;">
-    <input type="text" id="githubInput" placeholder="https://github.com/nimit-patel or just: nimit-patel" 
+    <input type="text" id="githubInput" placeholder="https://github.com/CODECRUNCH or just: CODECRUNCH" 
            style="flex: 1 1 300px; padding: 0.5rem; border-radius: 5px; border: 1px solid #ccc; font-size: 1rem;" />
     <button onclick="checkGitHubStatus()" 
             style="padding: 0.5rem 1rem; font-size: 1rem; background: #00ff99; color: #000; border: none; border-radius: 5px; cursor: pointer;">
