--- a/hackathonvolunteer-wikicopy.html
+++ b/hackathonvolunteer-wikicopy.html
@@ -1803,7 +1803,7 @@ body::before {
                             
                             // Add private channel link (from API response)
                             html += `<br><div style="background: linear-gradient(45deg, #43b581, #4caf50); padding: 10px 15px; border-radius: 8px; margin: 8px 0; text-align: center; box-shadow: 0 4px 15px rgba(67, 181, 129, 0.3);">`;
-                            html += `<a href="${entry.privateChannelLink}" target="_blank" style="color: white; text-decoration: none; font-weight: bold; font-size: 1.1em;">🔒 CHECK PRIVATE CHANNEL ACCESS 🔒</a>`;
+                            html += `<a href="${entry.privateChannelLink}" target="_blank" style="color: white; text-decoration: none; font-weight: bold; font-size: 1.1em;">🔒 CHECK PRIVATE CHANNEL ACCESS "⚡hack-volunteers" 🔒</a>`;
                             html += `</div>`;
                             
                             html += `</div>`;
