--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -4521,7 +4521,7 @@ body {
                     </div>
                 </div>
 
-                <!-- Volunteer 14 -->
+                <!-- Volunteer xx -->
                 <!-- <div class="col-lg-4 col-md-6 mb-4">
                     <div class="volunteer-profile-card">
                         <div class="volunteer-avatar">
@@ -4535,7 +4535,7 @@ body {
                     </div>
                 </div> -->
 
-                <!-- Volunteer 15 -->
+                <!-- Volunteer 14 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="volunteer-profile-card">
                         <div class="volunteer-avatar">
@@ -4549,7 +4549,7 @@ body {
                     </div>
                 </div>
 
-                <!-- Volunteer 16 -->
+                <!-- Volunteer 15 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="volunteer-profile-card">
                         <div class="volunteer-avatar">
@@ -4563,6 +4563,19 @@ body {
                     </div>
                 </div>
 
+                <!-- Volunteer 16 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Lisa Thompson" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Trupal Patel</h4>
+                            <p class="volunteer-experience">Experience: Senior Software Engineer, Cloud Infrastructure at Autodesk</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
