--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -4577,6 +4577,22 @@ body {
                     </div>
                 </div>
 
+                <!-- Volunteer 16 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Lisa Thompson" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Ranjan Kathuria</h4>
+                            <p class="volunteer-experience">Experience: Staff Security Engineerat Rubrik</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
         
