--- a/hackathons-wikicopy.html
+++ b/hackathons-wikicopy.html
@@ -1621,6 +1621,7 @@ document.addEventListener('visibilitychange', function() {
                                         <h4><i class="bi bi-exclamation-triangle"></i> Error</h4>
                                         <p>${data.error}</p>
                                         <p><strong>Contact:</strong> ${data.contact || 'DM CodeCrunch Global on LinkedIn'}</p>
+                                        ${data.debug ? `<p style="font-size: 0.8rem; opacity: 0.7;"><strong>Debug:</strong> ${data.debug}</p>` : ''}
                                     </div>
                                 `;
                                 return;
@@ -1629,8 +1630,9 @@ document.addEventListener('visibilitychange', function() {
                             if (!data.found) {
                                 resultsDiv.innerHTML = `
                                     <div class="register-note" style="background: rgba(255, 51, 51, 0.1); border-color: var(--danger); color: var(--danger); margin-top: 1rem;">
-                                        <h4><i class="bi bi-envelope-x"></i> Email Not Found</h4>
+                                        <h4><i class="bi bi-envelope-x"></i> Registration Not Found</h4>
                                         <p>${data.message}</p>
+                                        ${data.suggestion ? `<p><strong>Suggestion:</strong> ${data.suggestion}</p>` : ''}
                                         <p><strong>Contact:</strong> ${data.contact}</p>
                                     </div>
                                     ${data.hackInfo305Fall ? generateInfoBox(data.hackInfo305Fall) : ''}
