--- a/hackathons-wikicopy.html
+++ b/hackathons-wikicopy.html
@@ -1545,42 +1545,11 @@ document.addEventListener('visibilitychange', function() {
 
 
 
-<!-- 🔍 REGISTRATION STATUS CHECKER SECTION -->
-<section id="registration-status-checker" style="padding: 2rem 0;">
-  <div class="container">
-    <h2 style="font-family: 'Courier New', monospace; color: var(--cyber-blue); text-align: center; margin-bottom: 2rem;">
-      <i class="bi bi-search"></i> Check Your Registration Status
-    </h2>
-
-    <div class="card" style="background: var(--bg-card-light); border: 2px solid var(--cyber-blue); padding: 2rem; border-radius: 12px;">
-      <form id="registrationForm" style="display: flex; flex-wrap: wrap; gap: 15px; align-items: center;">
-        <input 
-          type="email" 
-          id="emailInput" 
-          placeholder="Enter your email address..." 
-          required
-          style="flex: 1; min-width: 250px; padding: 12px 18px; border: 2px solid var(--matrix-green); border-radius: 25px; font-size: 0.9rem; background: var(--bg-card); color: var(--text-primary); font-family: 'Courier New', monospace;"
-        >
-        <button 
-          type="submit" 
-          style="padding: 12px 24px; background: linear-gradient(45deg, var(--cyber-blue), var(--matrix-green)); color: white; border: none; border-radius: 25px; font-size: 0.9rem; font-weight: 600; cursor: pointer; font-family: 'Courier New', monospace;"
-        >
-          <i class="bi bi-search"></i> Check Status
-        </button>
-      </form>
-
-      <div id="registrationResults" style="margin-top: 2rem;"></div>
-    </div>
-  </div>
-</section>
-
 <script>
-const API_URL = 'https://script.google.com/macros/s/AKfycbyZC9BaienF2yDj6emfq-rYYPQGCG7obyUEtlKpD3H0gnsTv8luiHoBGMxcu_-DOzw/exec';
-
+  const API_URL = 'https://script.google.com/macros/s/AKfycbyZC9BaienF2yDj6emfq-rYYPQGCG7obyUEtlKpD3H0gnsTv8luiHoBGMxcu_-DOzw/exec';
 
   document.getElementById('registrationForm').addEventListener('submit', async function(e) {
     e.preventDefault();
-
     const email = document.getElementById('emailInput').value.trim();
     const resultsDiv = document.getElementById('registrationResults');
 
@@ -1589,42 +1558,38 @@ const API_URL = 'https://script.google.com/macros/s/AKfycbyZC9BaienF2yDj6emfq-rY
       return;
     }
 
-    resultsDiv.innerHTML = `
-      <div style="text-align: center; color: var(--text-primary); font-family: 'Courier New', monospace;">
-        <div class="spinner-border text-success" role="status"></div>
-        <p>Checking registration...</p>
-      </div>
-    `;
+    resultsDiv.innerHTML = `<p>🔍 Checking registration status for: <strong>${email}</strong></p>`;
 
     try {
-      const res = await fetch(`${API_URL}?email=${encodeURIComponent(email)}&referer=${encodeURIComponent(window.location.href)}`);
-      const data = await res.json();
+      const response = await fetch(`${API_URL}?email=${encodeURIComponent(email)}&referer=${encodeURIComponent(window.location.href)}`);
+      const data = await response.json();
 
       if (!data.success) {
-        resultsDiv.innerHTML = `<div style="color: red; font-family: 'Courier New', monospace;">Not found: ${data.error || 'No registration found.'}</div>`;
+        resultsDiv.innerHTML = `<p style="color:red;">❌ ${data.error}</p>`;
         return;
       }
 
-      let hacks = '';
-      if (data.hack305Fall2025) {
-        hacks += `<p><strong>305 Hack Fall 2025:</strong> ${data.hack305Fall2025.confirmationStatus}</p>`;
+      const user = data.userData;
+      let html = `<div style="font-family: 'Courier New', monospace;">`;
+      html += `<h3 style="color: green;">✅ ${data.message}</h3>`;
+      html += `<p><strong>Email:</strong> ${user.email}</p>`;
+      html += `<p><strong>Submitted At:</strong> ${user.timestamp}</p>`;
+      html += `<hr>`;
+      html += `<h4 style="margin-top:1rem;">📄 Full Form Response:</h4>`;
+      html += `<ul style="list-style-type: none; padding-left: 0;">`;
+
+      for (const [key, value] of Object.entries(user.additionalFields)) {
+        html += `<li style="margin-bottom: 8px;"><strong>${key}:</strong> ${value}</li>`;
       }
 
-      resultsDiv.innerHTML = `
-        <div style="color: var(--text-primary); font-family: 'Courier New', monospace; background: #eaffea; border: 1px solid var(--matrix-green); padding: 1rem; border-radius: 8px;">
-          <h4><i class="bi bi-check-circle-fill"></i> ${data.message}</h4>
-          <p><strong>Email:</strong> ${data.email}</p>
-          <p><strong>Status:</strong> ${data.status}</p>
-          ${hacks}
-        </div>
-      `;
+      html += `</ul></div>`;
+      resultsDiv.innerHTML = html;
 
     } catch (err) {
-      resultsDiv.innerHTML = `<div style="color: red; font-family: 'Courier New', monospace;">Error: Could not connect to the server.</div>`;
+      resultsDiv.innerHTML = `<p style="color:red;">⚠️ Could not connect to server. Try again later.</p>`;
     }
   });
 </script>
-
 
 
 
