--- a/hackathons-wikicopy.html
+++ b/hackathons-wikicopy.html
@@ -1545,6 +1545,35 @@ document.addEventListener('visibilitychange', function() {
 
 
 
+<!-- 🔍 REGISTRATION STATUS CHECKER SECTION -->
+<section id="registration-status-checker" style="padding: 2rem 0;">
+  <div class="container">
+    <h2 style="font-family: 'Courier New', monospace; color: var(--cyber-blue); text-align: center; margin-bottom: 2rem;">
+      <i class="bi bi-search"></i> Check Your Registration Status
+    </h2>
+
+    <div class="card" style="background: var(--bg-card-light); border: 2px solid var(--cyber-blue); padding: 2rem; border-radius: 12px;">
+      <form id="registrationForm" style="display: flex; flex-wrap: wrap; gap: 15px; align-items: center;">
+        <input 
+          type="email" 
+          id="emailInput" 
+          placeholder="Enter your email address..." 
+          required
+          style="flex: 1; min-width: 250px; padding: 12px 18px; border: 2px solid var(--matrix-green); border-radius: 25px; font-size: 0.9rem; background: var(--bg-card); color: var(--text-primary); font-family: 'Courier New', monospace;"
+        >
+        <button 
+          type="submit" 
+          style="padding: 12px 24px; background: linear-gradient(45deg, var(--cyber-blue), var(--matrix-green)); color: white; border: none; border-radius: 25px; font-size: 0.9rem; font-weight: 600; cursor: pointer; font-family: 'Courier New', monospace;"
+        >
+          <i class="bi bi-search"></i> Check Status
+        </button>
+      </form>
+
+      <div id="registrationResults" style="margin-top: 2rem;"></div>
+    </div>
+  </div>
+</section>
+
 <script>
   const API_URL = 'https://script.google.com/macros/s/AKfycbyZC9BaienF2yDj6emfq-rYYPQGCG7obyUEtlKpD3H0gnsTv8luiHoBGMxcu_-DOzw/exec';
 
@@ -1590,6 +1619,8 @@ document.addEventListener('visibilitychange', function() {
     }
   });
 </script>
+
+
 
 
 
